tests/fixtures/fail/core_redefine_option.sc
let Option = std.Option

let Option(T: type) = enum {
  Some(T),
  None,
}

let main(): i32 = { 42 }
